Fix bug, when work still transfered after was abadonned